--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@rollup/plugin-node-resolve": "^15.1.0",
     "@rollup/plugin-typescript": "^11.1.2",
     "@types/esm": "^3.2.0",
+    "@types/js-yaml": "^4",
     "@types/lodash.template": "^4.5.1",
     "@types/node": "^20.4.2",
     "@types/rollup-plugin-peer-deps-external": "^2.2.1",
@@ -105,7 +106,11 @@
     "@clack/prompts": "^0.6.3",
     "change-case": "^4.1.2",
     "consola": "^3.2.3",
+    "dotenv": "^16.3.1",
+    "glob": "^10.3.3",
+    "js-yaml": "^4.1.0",
     "lodash.template": "^4.5.0",
-    "picocolors": "^1.0.0"
+    "picocolors": "^1.0.0",
+    "zod": "^3.21.4"
   }
 }
