--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -13,6 +13,8 @@ plugins:
     spec: "@yarnpkg/plugin-workspace-tools"
   - path: .yarn/plugins/@yarnpkg/plugin-tsconfig-references.cjs
     spec: "https://github.com/Dcard/yarn-plugins/releases/latest/download/plugin-tsconfig-references.js"
+  - path: .yarn/plugins/@yarnpkg/plugin-version.cjs
+    spec: "@yarnpkg/plugin-version"
 
 preferInteractive: true
 
