--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "build": "rollup --configPlugin typescript --config rollup.config.ts",
     "typecheck": "tsc --noEmit",
     "start": "node --experimental-modules --experimental-import-meta-resolve dist/esm/index.mjs",
-    "schema": "typescript-json-schema --out schema.json --skipLibCheck src/types/index.ts Config",
+    "schema": "typescript-json-schema --out schema.json --skipLibCheck src/config.ts Config",
     "release": "yarn publish",
     "lint": "eslint --ext=ts,js,vue .",
     "clean": "yarn exec rm -rf dist"
