--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -18,4 +18,13 @@ plugins:
 
 preferInteractive: true
 
+npmRegistryServer: http://192.168.10.52:5050/api/packages/sozdev/npm/
+
+unsafeHttpWhitelist:
+  - "192.168.10.52"
+
+npmPublishAccess: "public"
+
+npmAuthToken: d478e523fe0a0b5200e75f90b06d659b80f52dd4
+
 yarnPath: .yarn/releases/yarn-3.6.1.cjs
