--- a/.gitea/workflows/release.yml
+++ b/.gitea/workflows/release.yml
@@ -25,6 +25,6 @@ jobs:
         run: corepack enable
 
       - name: Generate changelog
-        run: yarn dlx changelogithub
+        run: yarn release
         env:
           GITHUB_TOKEN: ${{secrets.GITEA_TOKEN}}
