--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "typecheck": "tsc --noEmit",
     "start": "node --experimental-modules --experimental-import-meta-resolve dist/esm/index.mjs",
     "schema": "typescript-json-schema --out schema.json --skipLibCheck src/config.ts Config",
-    "release": "yarn publish",
+    "release": "npm publish",
     "lint": "eslint --ext=ts,js,vue .",
     "clean": "yarn exec rm -rf dist"
   },
