--- a/.gitea/workflows/release.yml
+++ b/.gitea/workflows/release.yml
@@ -21,10 +21,11 @@ jobs:
         with:
           node-version: 18.x
 
-      - name: Install pnpm
+      - name: Enable corepack
         run: corepack enable
+
+      - name: Install dependencies
+        run: yarn
 
       - name: Generate changelog
         run: yarn release
-        env:
-          GITHUB_TOKEN: ${{secrets.GITEA_TOKEN}}
