--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -18,7 +18,10 @@ plugins:
 
 preferInteractive: true
 
-npmRegistryServer: http://192.168.10.52:5050/api/packages/sozdev/npm/
+npmScopes:
+  sozdev:
+    npmRegistryServer: "http://192.168.10.52:5050/api/packages/sozdev/npm/"
+    npmPublishRegistry: "http://192.168.10.52:5050/api/packages/sozdev/npm/"
 
 unsafeHttpWhitelist:
   - "192.168.10.52"
