--- a/.gitea/workflows/release.yml
+++ b/.gitea/workflows/release.yml
@@ -27,5 +27,5 @@ jobs:
       - name: Install dependencies
         run: yarn
 
-      - name: Generate changelog
+      - name: Publish package
         run: yarn release
