--- a/.gitea/workflows/publish.yml
+++ b/.gitea/workflows/publish.yml
@@ -19,9 +19,7 @@ jobs:
         with:
           node-version: latest
           cache: yarn
-
-      - name: Install dependencies
-        run: yarn install
+        run: yarn
 
       - name: Build
         run: yarn build
