--- a/.gitea/workflows/publish.yml
+++ b/.gitea/workflows/publish.yml
@@ -18,8 +18,12 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: latest
-          cache: yarn
-        run: yarn
+
+      - name: Enable corepack
+        run: corepack enable
+
+      - name: Install dependencies
+        run: yarn install
 
       - name: Build
         run: yarn build
