--- a/.gitea/workflows/publish.yml
+++ b/.gitea/workflows/publish.yml
@@ -12,7 +12,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3 # This step checks out a copy of your repository
+      - name: Checkout
+        uses: actions/checkout@v3 # This step checks out a copy of your repository
 
       - name: Set up Node.js
         uses: actions/setup-node@v3
