--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "$schema": "https://json.schemastore.org/package.json",
   "name": "@sozdev/templater",
   "type": "module",
-  "version": "0.0.5",
+  "version": "0.0.7",
   "packageManager": "yarn@3.5.1",
   "description": "Templater CLI",
   "author": "Alexander Semyenov <semyenov@hotmail.com>",
@@ -38,7 +38,7 @@
     "bin"
   ],
   "bin": {
-    "templater": "bin/templater-cli.mjs"
+    "tpl": "bin/templater-cli.mjs"
   },
   "scripts": {
     "dev": "esno src/index.ts",
