--- a/.gitea/workflows/ci.yml
+++ b/.gitea/workflows/ci.yml
@@ -15,16 +15,17 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Set node
+      - name: Setup node
         uses: actions/setup-node@v3
         with:
-          node-version: 18.x
+          node-version: latest
+          cache: yarn
 
       - name: Enable corepack
         run: corepack enable
 
-      - name: Install
-        run: yarn
+      - name: Install dependencies
+        run: yarn install --frozen-lockfile
 
       - name: Lint
         run: yarn lint
@@ -34,16 +35,17 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Set node
+      - name: Setup node
         uses: actions/setup-node@v3
         with:
-          node-version: 18.x
+          node-version: latest
+          cache: yarn
 
       - name: Enable corepack
         run: corepack enable
 
       - name: Install dependencies
-        run: yarn
+        run: yarn install --frozen-lockfile
 
       - name: Typecheck
         run: yarn typecheck
