--- a/.gitea/workflows/release.yml
+++ b/.gitea/workflows/release.yml
@@ -16,12 +16,13 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: latest
+          cache: yarn
 
       - name: Enable corepack
         run: corepack enable
 
       - name: Install dependencies
-        run: yarn install
+        run: yarn install --frozen-lockfile
 
       - name: Build
         run: yarn build
