--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   lint:
-    runs-on: local
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
 
@@ -31,7 +31,7 @@ jobs:
         run: yarn lint
 
   typecheck:
-    runs-on: local
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
 
