--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -3,24 +3,25 @@ env:
   node: true
 parser: vue-eslint-parser
 parserOptions:
-  parser: "@typescript-eslint/parser"
+  parser: '@typescript-eslint/parser'
 plugins:
   - vue
   - import
-  - "@typescript-eslint"
+  - '@typescript-eslint'
 extends:
   - eslint:recommended
   - plugin:import/recommended
   - plugin:import/typescript
   - plugin:@typescript-eslint/recommended
-  - "@antfu"
+  - '@antfu'
 settings:
   import/resolver:
     typescript: true
     node: true
 rules:
   no-console: warn
-  vue/multi-word-component-names: "off"
+  antfu/if-newline: off
+  vue/multi-word-component-names: off
   import/namespace: error
   import/default: error
   import/export: error
@@ -37,7 +38,7 @@ rules:
         - index
         - type
       pathGroups:
-        - pattern: "@/**"
+        - pattern: '@/**'
           group: internal
           position: after
         - pattern: ~/**
