--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,19 +1,19 @@
 enableTelemetry: false
 preferInteractive: true
 
-yarnPath: .yarn/releases/yarn-3.6.1.cjs
+yarnPath: .yarn/releases/yarn-3.6.3.cjs
 nodeLinker: node-modules
 
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.cjs
-    spec: "@yarnpkg/plugin-interactive-tools"
+    spec: '@yarnpkg/plugin-interactive-tools'
   - path: .yarn/plugins/@yarnpkg/plugin-typescript.cjs
-    spec: "@yarnpkg/plugin-typescript"
+    spec: '@yarnpkg/plugin-typescript'
   - path: .yarn/plugins/@yarnpkg/plugin-stage.cjs
-    spec: "@yarnpkg/plugin-stage"
+    spec: '@yarnpkg/plugin-stage'
   - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
-    spec: "@yarnpkg/plugin-workspace-tools"
+    spec: '@yarnpkg/plugin-workspace-tools'
   - path: .yarn/plugins/@yarnpkg/plugin-tsconfig-references.cjs
-    spec: "https://github.com/Dcard/yarn-plugins/releases/latest/download/plugin-tsconfig-references.js"
+    spec: 'https://github.com/Dcard/yarn-plugins/releases/latest/download/plugin-tsconfig-references.js'
   - path: .yarn/plugins/@yarnpkg/plugin-version.cjs
-    spec: "@yarnpkg/plugin-version"
+    spec: '@yarnpkg/plugin-version'
