--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,20 +6,17 @@
   "editor.wordWrap": "bounded",
   "editor.wordWrapColumn": 80,
   "editor.wrappingIndent": "deepIndent",
-
   "where-am-i.icon": "home",
   "where-am-i.template": "{icon} {project-name}",
   "where-am-i.colorful": true,
   "where-am-i.color": "#fff",
-
   "npm.packageManager": "yarn",
-
   "typescript.preferences.includePackageJsonAutoImports": "on",
   "typescript.enablePromptUseWorkspaceTsdk": true,
   "typescript.tsdk": "node_modules/typescript/lib",
-
   "eslint.format.enable": true,
   "eslint.lintTask.enable": true,
+  "eslint.experimental.useFlatConfig": true,
   "eslint.validate": [
     "javascript",
     "typescript",
@@ -27,25 +24,24 @@
     "typescriptreact",
     "vue"
   ],
-
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": true
+  },
   "browse-lite.startUrl": "http://localhost:3000",
   "browse-lite.chromeExecutable": "/usr/bin/chromium",
-
   "explorer.fileNesting.patterns": {
     "nuxt.config.*": "*.env, .babelrc*, .codecov, .cssnanorc*, .env.*, .envrc, .htmlnanorc*, .lighthouserc.*, .mocha*, .postcssrc*, .terserrc*, api-extractor.json, ava.config.*, babel.config.*, contentlayer.config.*, cssnano.config.*, cypress.*, env.d.ts, formkit.config.*, formulate.config.*, histoire.config.*, htmlnanorc.*, jasmine.*, jest.config.*, jsconfig.*, karma*, lighthouserc.*, playwright.config.*, postcss.config.*, puppeteer.config.*, rspack.config.*, svgo.config.*, tailwind.config.*, tsconfig.*, tsdoc.*, uno.config.*, unocss.config.*, vitest.config.*, webpack.config.*, windi.config.*, i18n.config.*"
   },
-
   "fileNestingUpdater.autoUpdate": true,
   "fileNestingUpdater.autoUpdateInterval": 720,
   "fileNestingUpdater.promptOnAutoUpdate": true,
   "fileNestingUpdater.upstreamRepo": "antfu/vscode-file-nesting-config",
   "fileNestingUpdater.upstreamBranch": "main",
-
   "[vue]": {
     "editor.defaultFormatter": "dbaeumer.vscode-eslint"
   },
   "[typescript]": {
-    "editor.defaultFormatter": "dbaeumer.vscode-eslint"
+    "editor.defaultFormatter": "vscode.typescript-language-features"
   },
   "[markdown]": {
     "editor.formatOnSave": false
@@ -59,5 +55,20 @@
   },
   "[javascript]": {
     "editor.defaultFormatter": "dbaeumer.vscode-eslint"
-  }
+  },
+  "redisXplorer.config": {
+    "profiles": [
+      {
+        "name": "semyenov",
+        "host": "redis",
+        "accessKey": "",
+        "filter": "pcp:desc*",
+        "port": "6379"
+      }
+    ],
+    "scanLimit": 200
+  },
+  "[jsonc]": {
+    "editor.defaultFormatter": "vscode.json-language-features"
+  },
 }
