--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,19 +1,15 @@
-enableTelemetry: false
-preferInteractive: true
+compressionLevel: mixed
 
-yarnPath: .yarn/releases/yarn-3.6.3.cjs
+enableGlobalCache: false
+
+enableTelemetry: false
+
 nodeLinker: node-modules
 
 plugins:
-  - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.cjs
-    spec: '@yarnpkg/plugin-interactive-tools'
-  - path: .yarn/plugins/@yarnpkg/plugin-typescript.cjs
-    spec: '@yarnpkg/plugin-typescript'
-  - path: .yarn/plugins/@yarnpkg/plugin-stage.cjs
-    spec: '@yarnpkg/plugin-stage'
-  - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
-    spec: '@yarnpkg/plugin-workspace-tools'
   - path: .yarn/plugins/@yarnpkg/plugin-tsconfig-references.cjs
-    spec: 'https://github.com/Dcard/yarn-plugins/releases/latest/download/plugin-tsconfig-references.js'
-  - path: .yarn/plugins/@yarnpkg/plugin-version.cjs
-    spec: '@yarnpkg/plugin-version'
+    spec: "https://github.com/Dcard/yarn-plugins/releases/latest/download/plugin-tsconfig-references.js"
+
+preferInteractive: true
+
+yarnPath: .yarn/releases/yarn-4.0.1.cjs
