--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "name": "@sozdev/templater",
   "type": "module",
   "version": "0.0.9",
-  "packageManager": "yarn@3.6.3",
+  "packageManager": "yarn@4.0.1",
   "description": "Templater CLI",
   "author": "Alexander Semyenov <semyenov@hotmail.com>",
   "license": "MIT",
@@ -47,55 +47,58 @@
     "start": "node --experimental-modules --experimental-import-meta-resolve dist/esm/index.mjs",
     "schema": "typescript-json-schema --out schema.json --skipLibCheck src/lib/config.ts Config",
     "release": "yarn npm publish",
-    "lint": "eslint --ext=ts,js,vue .",
+    "lint": "eslint -c eslint.config.js ./src/**/*.{ts,js,vue}",
     "clean": "yarn exec rm -rf dist"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.41.0",
-    "@antfu/eslint-config-ts": "^0.41.0",
+    "@antfu/eslint-config": "^1.1.1",
+    "@antfu/eslint-config-ts": "^0.43.1",
     "@antfu/utils": "^0.7.6",
-    "@rollup/plugin-alias": "^5.0.0",
-    "@rollup/plugin-commonjs": "^25.0.4",
-    "@rollup/plugin-json": "^6.0.0",
-    "@rollup/plugin-node-resolve": "^15.2.1",
-    "@rollup/plugin-typescript": "^11.1.3",
-    "@types/esm": "^3.2.0",
-    "@types/js-yaml": "^4.0.5",
-    "@types/lodash.template": "^4.5.1",
-    "@types/node": "^20.5.6",
-    "@types/rollup-plugin-peer-deps-external": "^2.2.1",
-    "@typescript-eslint/eslint-plugin": "^6.4.1",
-    "@typescript-eslint/parser": "^6.4.1",
-    "esbuild": "^0.19.2",
-    "eslint": "^8.48.0",
+    "@eslint/eslintrc": "^2.1.3",
+    "@rollup/plugin-alias": "^5.0.1",
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-json": "^6.0.1",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-typescript": "^11.1.5",
+    "@types/eslint": "^8.44.7",
+    "@types/eslint__eslintrc": "^2",
+    "@types/esm": "^3.2.2",
+    "@types/js-yaml": "^4.0.9",
+    "@types/lodash.template": "^4.5.3",
+    "@types/node": "^20.9.0",
+    "@types/rollup-plugin-peer-deps-external": "^2.2.4",
+    "@typescript-eslint/eslint-plugin": "^6.10.0",
+    "@typescript-eslint/parser": "^6.10.0",
+    "@typescript-eslint/utils": "^6.10.0",
+    "esbuild": "^0.19.5",
+    "eslint": "^8.53.0",
     "eslint-import-resolver-node": "^0.3.9",
-    "eslint-import-resolver-typescript": "^3.6.0",
-    "eslint-plugin-antfu": "^0.41.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-antfu": "^1.0.2",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-html": "^7.1.0",
-    "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-jsonc": "^2.9.0",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-jsonc": "^2.10.0",
     "eslint-plugin-markdown": "^3.0.1",
-    "eslint-plugin-n": "^16.0.2",
+    "eslint-plugin-n": "^16.3.1",
     "eslint-plugin-no-only-tests": "^3.1.0",
     "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-unicorn": "^48.0.1",
+    "eslint-plugin-unicorn": "^49.0.0",
     "eslint-plugin-unused-imports": "^3.0.0",
-    "eslint-plugin-vue": "^9.17.0",
-    "eslint-plugin-yml": "^1.8.0",
-    "esno": "^0.17.0",
-    "jsonc-eslint-parser": "^2.3.0",
-    "lint-staged": "^14.0.1",
-    "rollup": "^3.28.1",
-    "rollup-plugin-dts": "^6.0.0",
-    "rollup-plugin-esbuild": "^5.0.0",
+    "eslint-plugin-vue": "^9.18.1",
+    "eslint-plugin-yml": "^1.10.0",
+    "esno": "^4.0.0",
+    "jsonc-eslint-parser": "^2.4.0",
+    "lint-staged": "^15.1.0",
+    "rollup": "^4.4.0",
+    "rollup-plugin-dts": "^6.1.0",
+    "rollup-plugin-esbuild": "^6.1.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
-    "rollup-plugin-terser": "^7.0.2",
     "simple-git-hooks": "^2.9.0",
     "tslib": "^2.6.2",
     "typescript": "^5.2.2",
-    "typescript-json-schema": "^0.60.0",
-    "vue-eslint-parser": "^9.3.1",
+    "typescript-json-schema": "^0.62.0",
+    "vue-eslint-parser": "^9.3.2",
     "yaml-eslint-parser": "^1.2.2"
   },
   "simple-git-hooks": {
@@ -106,13 +109,13 @@
   },
   "dependencies": {
     "@clack/prompts": "^0.7.0",
-    "change-case": "^4.1.2",
+    "change-case": "^5.1.2",
     "consola": "^3.2.3",
     "dotenv": "^16.3.1",
-    "glob": "^10.3.3",
+    "glob": "^10.3.10",
     "js-yaml": "^4.1.0",
     "lodash.template": "^4.5.0",
     "picocolors": "^1.0.0",
-    "zod": "^3.22.2"
+    "zod": "^3.22.4"
   }
 }
