--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,20 +1,19 @@
 {
   "$schema": "https://json.schemastore.org/tsconfig.json",
-
   "compilerOptions": {
     "moduleResolution": "bundler",
-    "lib": ["ESNext", "DOM"],
-
+    "lib": [
+      "ESNext",
+      "DOM"
+    ],
     "declaration": false,
     "target": "ESNext",
     "module": "ESNext",
-
     "strict": true,
     "resolveJsonModule": true,
     "resolvePackageJsonExports": true,
     "resolvePackageJsonImports": true,
     "allowSyntheticDefaultImports": true,
-
     "forceConsistentCasingInFileNames": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
@@ -22,14 +21,16 @@
     "sourceMap": true,
     "importHelpers": true,
     "noResolve": false,
-
     "baseUrl": "./",
     "rootDir": "./src",
     "outDir": "./dist",
-
     "paths": {
-      "~/*": ["./src/*"]
+      "~/*": [
+        "./src/*"
+      ]
     }
   },
-  "include": ["./src/**/*"]
+  "include": [
+    "./src/**/*"
+  ]
 }
