--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -1,11 +1,20 @@
 version: '3.8'
+
 services:
   devcontainer:
-    image: gitea.local/sozdev/devcontainer-ts
+    image: mcr.microsoft.com/devcontainers/typescript-node:20
+
+    command: tail -f /dev/null
+
+    ports:
+      - 3000:3000
+
+    environment:
+      - NODE_ENV=development
+      - PORT=3000
+
     volumes:
       - ../..:/workspaces:cached
-    network_mode: service:db
-    command: sleep infinity
 
   redis:
     image: redis:latest
@@ -17,16 +26,5 @@ services:
     environment:
       - ALLOW_EMPTY_PASSWORD=yes
 
-  db:
-    image: postgres:latest
-    restart: unless-stopped
-    volumes:
-      - postgres-data:/var/lib/postgresql/data
-    environment:
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_USER: postgres
-      POSTGRES_DB: postgres
-
 volumes:
-  postgres-data:
   redis-data:
