--- a/package.json
+++ b/package.json
@@ -42,12 +42,12 @@
   ],
   "scripts": {
     "dev": "esno src/index.ts",
-    "build": "rollup --configPlugin typescript --config rollup.config.ts",
+    "build": "cross-env NODE_OPTIONS=\"--no-warnings\" rollup --configPlugin typescript --config rollup.config.ts",
     "typecheck": "tsc --noEmit",
     "start": "node --experimental-modules --experimental-import-meta-resolve dist/esm/index.mjs",
     "schema": "typescript-json-schema --out schema.json --skipLibCheck src/lib/config.ts Config",
     "release": "yarn npm publish",
-    "lint": "eslint -c eslint.config.js",
+    "lint": "eslint --config eslint.config.js",
     "clean": "yarn exec rm -rf dist"
   },
   "dependencies": {
@@ -81,6 +81,7 @@
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
     "@typescript-eslint/utils": "^6.10.0",
+    "cross-env": "^7.0.3",
     "esbuild": "^0.19.5",
     "eslint": "^8.53.0",
     "eslint-import-resolver-node": "^0.3.9",
@@ -116,6 +117,6 @@
     "pre-commit": "yarn lint-staged"
   },
   "lint-staged": {
-    "./src/**/*.{ts,js,yaml,yml,json,vue}": "yarn lint --fix --"
+    "./src/**/*.{ts,js,yaml,yml,json,md,mdc,vue}": "yarn lint --fix --"
   }
 }
