--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -1,9 +1,9 @@
 {
   "extends": "./tsconfig.json",
+
   "compilerOptions": {
-    "rootDir": "./",
+    "rootDir": "./"
   },
-  "include": [
-    "/**/*.ts",
-  ]
+
+  "include": ["/**/*.{ts,js,yaml,yml,json,md,mdc,vue}"]
 }
