--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,34 +2,31 @@
   "$schema": "https://json.schemastore.org/tsconfig.json",
 
   "compilerOptions": {
-    "moduleResolution": "bundler",
-    "lib": ["ESNext", "DOM"],
-
-    "declaration": false,
     "target": "ESNext",
+    "lib": ["ESNext", "DOM"],
+    "baseUrl": "./",
+    "rootDir": "./src",
     "module": "ESNext",
-
-    "strict": true,
+    "moduleResolution": "Bundler",
+    "noResolve": false,
+    "paths": {
+      "~/*": ["./src/*"],
+      "@/*": ["./src/*"]
+    },
     "resolveJsonModule": true,
     "resolvePackageJsonExports": true,
     "resolvePackageJsonImports": true,
-    "allowSyntheticDefaultImports": true,
-
-    "forceConsistentCasingInFileNames": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true,
     "allowJs": true,
-    "sourceMap": true,
+    "strict": true,
+    "declaration": false,
     "importHelpers": true,
-    "noResolve": false,
-
-    "baseUrl": "./",
-    "rootDir": "./src",
     "outDir": "./dist",
-
-    "paths": {
-      "~/*": ["./src/*"]
-    }
+    "sourceMap": true,
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "skipLibCheck": true
   },
+
   "include": ["./src/**/*"]
 }
