--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
   "$schema": "https://json.schemastore.org/package.json",
-  "name": "@sozdev/templater",
+  "name": "@sozdev/eslint-config",
   "type": "module",
   "version": "0.0.9",
   "packageManager": "yarn@4.0.1",
-  "description": "Templater CLI",
+  "description": "Eslint-config CLI",
   "author": "Alexander Semyenov <semyenov@hotmail.com>",
   "license": "MIT",
-  "homepage": "https://github.com/semyenov/templater#readme",
+  "homepage": "https://github.com/semyenov/eslint-config#readme",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/semyenov/templater.git"
+    "url": "git+https://github.com/semyenov/eslint-config.git"
   },
-  "bugs": "https://github.com/semyenov/templater/issues",
+  "bugs": "https://github.com/semyenov/eslint-config/issues",
   "keywords": [],
   "sideEffects": false,
   "exports": {
@@ -33,36 +33,24 @@
       ]
     }
   },
-  "bin": {
-    "tpl": "bin/tpl.mjs"
-  },
   "files": [
-    "bin",
     "dist"
   ],
   "scripts": {
     "dev": "esno src/index.ts",
-    "build": "cross-env NODE_OPTIONS=\"--no-warnings\" rollup --configPlugin typescript --config rollup.config.ts",
+    "build": "cross-env NODE_OPTIONS=\"--no-warnings\" rollup --silent --configPlugin typescript --config rollup.config.ts",
     "typecheck": "tsc --noEmit",
-    "start": "node --experimental-modules --experimental-import-meta-resolve dist/esm/index.mjs",
-    "schema": "typescript-json-schema --out schema.json --skipLibCheck src/lib/config.ts Config",
+    "start": "cross-env NODE_OPTIONS=\"--experimental-modules --experimental-import-meta-resolve --no-warnings\" dist/esm/index.mjs",
+    "schema": "typescript-json-schema --out schema.json --skipLibCheck src/index.ts ConfigItem",
     "release": "yarn npm publish",
     "lint": "eslint --config eslint.config.js",
     "clean": "yarn exec rm -rf dist"
   },
   "dependencies": {
-    "@clack/prompts": "^0.7.0",
-    "change-case": "^5.1.2",
-    "consola": "^3.2.3",
-    "dotenv": "^16.3.1",
-    "glob": "^10.3.10",
-    "js-yaml": "^4.1.0",
-    "lodash.template": "^4.5.0",
-    "picocolors": "^1.0.0",
-    "zod": "^3.22.4"
+    "@antfu/eslint-config": "^1.1.1",
+    "consola": "^3.2.3"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^1.1.1",
     "@antfu/eslint-config-ts": "^0.43.1",
     "@antfu/utils": "^0.7.6",
     "@eslint/eslintrc": "^2.1.3",
@@ -70,17 +58,16 @@
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-json": "^6.0.1",
     "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-sucrase": "^5.0.2",
     "@rollup/plugin-typescript": "^11.1.5",
     "@types/eslint": "^8.44.7",
-    "@types/eslint__eslintrc": "^2",
+    "@types/eslint__eslintrc": "^2.1.1",
     "@types/esm": "^3.2.2",
-    "@types/js-yaml": "^4.0.9",
-    "@types/lodash.template": "^4.5.3",
     "@types/node": "^20.9.0",
     "@types/rollup-plugin-peer-deps-external": "^2.2.4",
-    "@typescript-eslint/eslint-plugin": "^6.10.0",
-    "@typescript-eslint/parser": "^6.10.0",
-    "@typescript-eslint/utils": "^6.10.0",
+    "@typescript-eslint/eslint-plugin": "^6.11.0",
+    "@typescript-eslint/parser": "^6.11.0",
+    "@typescript-eslint/utils": "^6.11.0",
     "cross-env": "^7.0.3",
     "esbuild": "^0.19.5",
     "eslint": "^8.53.0",
