--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,17 +12,14 @@
   },
 
   "npm.packageManager": "yarn",
+
   "typescript.preferences.includePackageJsonAutoImports": "on",
   "typescript.enablePromptUseWorkspaceTsdk": true,
-  "typescript.tsdk": "node_modules/typescript/lib",
-
-  "where-am-i.icon": "home",
-  "where-am-i.template": "{icon} {project-name}",
-  "where-am-i.colorful": true,
-  "where-am-i.color": "#fff",
+  "typescript.tsdk": ".yarn/sdks/typescript/lib",
 
   "eslint.format.enable": true,
   "eslint.lintTask.enable": true,
+  "eslint.nodePath": ".yarn/sdks",
   "eslint.experimental.useFlatConfig": true,
   "eslint.validate": [
     "javascript",
@@ -35,6 +32,7 @@
     "json",
     "jsonc"
   ],
+
   // "eslint.rules.customizations": [
   //   { "rule": "style/*", "severity": "off" },
   //   { "rule": "*-indent", "severity": "off" },
@@ -49,15 +47,17 @@
 
   "browse-lite.startUrl": "http://localhost:3000",
   "browse-lite.chromeExecutable": "/usr/bin/chromium",
-  "explorer.fileNesting.patterns": {
-    "nuxt.config.*": "*.env, .babelrc*, .codecov, .cssnanorc*, .env.*, .envrc, .htmlnanorc*, .lighthouserc.*, .mocha*, .postcssrc*, .terserrc*, api-extractor.json, ava.config.*, babel.config.*, contentlayer.config.*, cssnano.config.*, cypress.*, env.d.ts, formkit.config.*, formulate.config.*, histoire.config.*, htmlnanorc.*, jasmine.*, jest.config.*, jsconfig.*, karma*, lighthouserc.*, playwright.config.*, postcss.config.*, puppeteer.config.*, rspack.config.*, svgo.config.*, tailwind.config.*, tsconfig.*, tsdoc.*, uno.config.*, unocss.config.*, vitest.config.*, webpack.config.*, windi.config.*, i18n.config.*"
-  },
 
   "fileNestingUpdater.autoUpdate": true,
   "fileNestingUpdater.autoUpdateInterval": 720,
   "fileNestingUpdater.promptOnAutoUpdate": true,
   "fileNestingUpdater.upstreamRepo": "antfu/vscode-file-nesting-config",
   "fileNestingUpdater.upstreamBranch": "main",
+
+  "where-am-i.icon": "home",
+  "where-am-i.template": "{icon} {project-name}",
+  "where-am-i.colorful": true,
+  "where-am-i.color": "#fff",
 
   "search.exclude": {
     "**/.yarn": true,
