--- a/package.json
+++ b/package.json
@@ -68,6 +68,8 @@
     "@typescript-eslint/eslint-plugin": "^6.11.0",
     "@typescript-eslint/parser": "^6.11.0",
     "@typescript-eslint/utils": "^6.11.0",
+    "@yarnpkg/builder": "^4.0.0",
+    "@yarnpkg/sdks": "^3.0.0",
     "cross-env": "^7.0.3",
     "esbuild": "^0.19.5",
     "eslint": "^8.53.0",
