--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -1,9 +1,9 @@
 {
   "extends": "./tsconfig.json",
-
   "compilerOptions": {
     "rootDir": "./"
   },
-
-  "include": ["/**/*.{ts,js,yaml,yml,json,md,mdc,vue}"]
+  "include": [
+    "/**/*.{ts,js,yaml,yml,json,md,mdc,vue}"
+  ]
 }
