--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,23 @@
 {
   "$schema": "https://json.schemastore.org/tsconfig.json",
-
   "compilerOptions": {
     "target": "ESNext",
-    "lib": ["ESNext", "DOM"],
+    "lib": [
+      "ESNext",
+      "DOM"
+    ],
     "baseUrl": "./",
     "rootDir": "./src",
     "module": "ESNext",
     "moduleResolution": "Bundler",
     "noResolve": false,
     "paths": {
-      "~/*": ["./src/*"],
-      "@/*": ["./src/*"]
+      "~/*": [
+        "./src/*"
+      ],
+      "@/*": [
+        "./src/*"
+      ]
     },
     "resolveJsonModule": true,
     "resolvePackageJsonExports": true,
@@ -27,6 +33,7 @@
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true
   },
-
-  "include": ["./src/**/*"]
+  "include": [
+    "./src/**/*"
+  ]
 }
