--- a/package.json
+++ b/package.json
@@ -42,9 +42,9 @@
   ],
   "scripts": {
     "dev": "esno src/index.ts",
-    "build": "cross-env NODE_OPTIONS=\"--no-warnings\" rollup --configPlugin typescript --config rollup.config.ts",
+    "build": "cross-env NODE_OPTIONS=\"--no-warnings\" rollup --silent --configPlugin typescript --config rollup.config.ts",
     "typecheck": "tsc --noEmit",
-    "start": "node --experimental-modules --experimental-import-meta-resolve dist/esm/index.mjs",
+    "start": "cross-env NODE_OPTIONS=\"--no-warnings --experimental-modules --experimental-import-meta-resolve\" node dist/esm/index.mjs",
     "schema": "typescript-json-schema --out schema.json --skipLibCheck src/lib/config.ts Config",
     "release": "yarn npm publish",
     "lint": "eslint --config eslint.config.js",
@@ -71,6 +71,7 @@
     "@rollup/plugin-json": "^6.0.1",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-typescript": "^11.1.5",
+    "@sozdev/eslint-config": "^0.0.11",
     "@types/eslint": "^8.44.7",
     "@types/eslint__eslintrc": "^2",
     "@types/esm": "^3.2.2",
