--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -2,13 +2,13 @@ version: '3.8'
 
 services:
   devcontainer:
-    image: mcr.microsoft.com/devcontainers/typescript-node:20
+    image: gitea.local/sozdev/devcontainer-ts
     restart: unless-stopped
     command: tail -f /dev/null
 
     environment:
       - NODE_ENV=development
-      - PORT=3000
+      - NITRO_PORT=3000
 
     ports:
       - 3000:3000
