--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
   ],
   "scripts": {
     "dev": "esno src/index.ts",
-    "build": "cross-env NODE_OPTIONS=\"--no-warnings\" rollup --silent --configPlugin typescript --config rollup.config.ts",
     "typecheck": "tsc --noEmit",
+    "build": "cross-env NODE_OPTIONS=\"--no-warnings\" rollup --configPlugin json --configPlugin esbuild --config rollup.config.ts",
     "start": "cross-env NODE_OPTIONS=\"--no-warnings --experimental-modules --experimental-import-meta-resolve\" node dist/esm/index.mjs",
     "schema": "typescript-json-schema --out schema.json --skipLibCheck src/lib/config.ts Config",
     "release": "yarn npm publish",
