--- a/package.json
+++ b/package.json
@@ -41,13 +41,13 @@
     "dist"
   ],
   "scripts": {
-    "dev": "esno src/index.ts",
-    "typecheck": "tsc --noEmit",
-    "build": "cross-env NODE_OPTIONS=\"--no-warnings\" rollup --configPlugin json --configPlugin esbuild --config rollup.config.ts",
-    "start": "cross-env NODE_OPTIONS=\"--no-warnings --experimental-modules --experimental-import-meta-resolve\" node dist/esm/index.mjs",
-    "schema": "typescript-json-schema --out schema.json --skipLibCheck src/lib/config.ts Config",
+    "dev": "yarn esno src/index.ts",
+    "typecheck": "yarn tsc --noEmit",
+    "build": "cross-env NODE_OPTIONS=\"--no-warnings\" yarn rollup --configPlugin esbuild --config rollup.config.ts",
+    "start": "cross-env NODE_OPTIONS=\"--no-warnings --experimental-modules --experimental-import-meta-resolve\" yarn node dist/esm/index.mjs",
+    "schema": "yarn typescript-json-schema --out schema.json --skipLibCheck src/lib/config.ts Config",
     "release": "yarn npm publish",
-    "lint": "eslint --config eslint.config.js",
+    "lint": "yarn eslint --config eslint.config.js",
     "clean": "yarn exec rm -rf dist"
   },
   "dependencies": {
